# lekiwi-object

./: .gitignore  AGENTS.md  README.md  SKILLS.md  guideline.md  pyproject.toml  requirements.txt
config/: default.json
docs/: GUIDELINE_TRACEABILITY.md  OFFLINE_DEVELOPMENT.md  PI_SETUP.md  PREREQUISITES.md  ROADMAP.md
lekiwi_object/: __init__.py  backends.py  calibration.py  camera_sources.py  cli.py  config.py  control_safety.py  function_calling.py  models.py  simulation.py  speech_io.py  task_state.py  touch_planning.py  trace_export.py  vision_backends.py  vision_targets.py  voice_prerequisites.py  workflow.py
lekiwi_object/agents/: __init__.py  control_agent.py  vision_agent.py  voice_agent.py
lekiwi_object/tools/: check_ssh.py
samples/vision/: desk_scene.json
tests/: test_backends.py  test_calibration.py  test_camera_sources.py  test_control_safety.py  test_function_calling.py  test_offline_simulation.py  test_speech_io.py  test_touch_planning.py  test_trace_export.py  test_vision_backends.py  test_vision_prerequisites.py  test_voice_prerequisites.py  test_workflow.py
