[project]
name = "lekiwi-object"
version = "0.1.0"
description = "Local-first multi-agent workflow for a LeKiwi mobile manipulator course project."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lekiwi-object = "lekiwi_object.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

